@@ -11,6 +11,7 @@ pycdf
  - sped up indexing in variable copies
  - improved handling of numpy fancy indexing in variable copies
    (fancy indexing is still not supported for variables themselves.)
+ - make assignment to attrs work
 toolbox
  - add function timeout_check_call to run another program with a timeout
 
